ボット呼び出し変更

--- a/car/index.html
+++ b/car/index.html
@@ -742,16 +742,7 @@ ONにして下さい。<br />
     });
 </script>
 <!-- チャットボット設置エリア -->
-<div id="chatbot-area"></div>
-<script src="/js/chat-widget.js" defer></script>
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-    if (window.ChatWidget && typeof window.ChatWidget.init === 'function') {
-      window.ChatWidget.init({ container: '#chatbot-area' });
-    }
-  });
-</script>
-<script src="/js/chat-loader.js" defer></script>
+<script src="../js/chat-loader.js" defer></script>
 </body>
 
 <!-- Mirrored from kpi-campingcar.com/car/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Jun 2025 02:54:24 GMT -->
