--- a/子連れで楽しめる！！今年の夏オススメキャンプ/index.html
+++ b/子連れで楽しめる！！今年の夏オススメキャンプ/index.html
@@ -161,6 +161,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         reserveButton.style.display = 'none'; // 要素を非表示にする
     });
 </script>
+<script src="../js/chat-loader.js" defer></script>
 </body>
 
 <!-- Mirrored from kpi-campingcar.com/子連れで楽しめる！！今年の夏オススメキャンプ/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Jun 2025 02:54:40 GMT -->
