--- a/6月のイベント情報イベント🎪/index.html
+++ b/6月のイベント情報イベント🎪/index.html
@@ -177,6 +177,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         reserveButton.style.display = 'none'; // 要素を非表示にする
     });
 </script>
+<script src="../js/chat-loader.js" defer></script>
 </body>
 
 <!-- Mirrored from kpi-campingcar.com/6月のイベント情報イベント🎪/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Jun 2025 02:54:39 GMT -->
