--- a/イベント出店記録を更新しました！！/index.html
+++ b/イベント出店記録を更新しました！！/index.html
@@ -155,6 +155,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         reserveButton.style.display = 'none'; // 要素を非表示にする
     });
 </script>
+<script src="../js/chat-loader.js" defer></script>
 </body>
 
 <!-- Mirrored from kpi-campingcar.com/イベント出店記録を更新しました！！/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 10 Jun 2025 02:54:39 GMT -->
